# PCA_KMEANS_DATA_MINING

./: 00-initial.ipynb  01-factor_analisys.ipynb  pyproject.toml
