[tool.poetry]
name = "kmeans-tutorial"
version = "0.1.0"
description = ""
authors = ["Bruno P. Barella"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
scipy = "^1.13.0"
adjustText = "^1.1.1"
numpy = "^1.26.4"
pydataset = "^0.2.0"
plotly = "^5.21.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
